[project]
name = "rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.1.1",
    "matplotlib>=3.10.3",
    "mlflow[auth]>=3.1.4",
    "numpy>=1.24.4",
    "optuna>=4.4.0",
    "pygame>=2.6.1",
    "rl-zoo3>=2.7.0",
    "sb3-contrib>=2.6.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
]

[project.optional-dependencies]
extra = [
    "stable-baselines3>=2.6.0",
]
